<resources>
    <string name="app_name">Coffee</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_addCoffee">Add Coffee</string>
    <string name="menu_search">Search</string>
    <string name="menu_support">Support</string>
    <string name="owner">Owner</string>
    <string name="question">Whom do you want to contact?</string>
    <string name="message">Your Message:</string>
    <string name="sendEmail">Send Message</string>
    <string name="emailConfirm">Email sent successfully!</string>
    <string name="details">Details</string>
    <string name="price" translatable="false">%.2f €</string>
    <string name="quantity">%.2f kg</string>
    <string name="availability">Availability:</string>
    <string name="cost">Cost:</string>
...
    <string name="quantity_lbl">Quantity:</string>
    <string name="quantity_add_lbl">Quantity [kg]:</string>
    <string name="strength">Strength:</string>
    <string name="additional_information">Additional information:</string>
    <string name="reviews_btn">Reviews</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="comment_hint">Please write your comment here.</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_search">Filter &amp; Search</string>
    <string name="filter_btn">Filter</string>
    <string name="all_shops">All Shops</string>
    <string name="settings">Settings</string>
...
    <string name="tel_nr" >Telefon</string>
    <string name="tel_nrPO">0664 9246052</string>
    <string name="email">E-Mail Address</string>
    <string name="po_name">Burim Vrella</string>
    <string name="Product_Owner" >Product Owner</string>
    <string name="contact" >Contact</string>
    <string name="coffee_name" >Name:</string>
    <string name="add_picture" >Add Picture</string>
    <string name="Add_coffee">Add Coffee</string>
    <string name="mandatory_field">Mandatory Field missing</string>
    <string name="coffee_added">Coffee added</string>
    <string name="saved_language" translatable="false">language</string>
    <string name="hungarian">Hungarian</string>
    <string name="comment_added">Comment added</string>
    <string name="none">None</string>
    <string name="arabica">Arabica</string>
...
