...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coffee_shop" />


        <EditText
            android:id="@+id/coffee_qty"
            android:background="@drawable/edit_textbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
...
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_additional_information" />

        <Button
            android:id="@+id/button_addCoffee"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dark_brown"
            android:text="@string/Add_coffee"
...
