...
                    android:layout_weight="2"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="10" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:hint="@string/comment_hint"
                    android:textColorHint="@color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_comment_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:textColor="@color/black"
...
