...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/home_row"/>

</androidx.constraintlayout.widget.ConstraintLayout>
